# si-printer-bridge

./: .gitmodules  README.md
docs/: bsm8-usb.md  updating-firmware.md
docs/img/: circuit.cddx
enclosure/: Makefile  README.md  config.scad  enclosure.scad
enclosure/modules/: rpi_pico.scad  usb_a_female_pcb.scad  usb_c_female_pcb.scad
firmware/: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
firmware/src/: console.c  console.h  data_processor.c  data_processor.h  devices.c  devices.h  led.c  led.h  main.c  printer.c  printer.h  usb.h  usb_descriptors.c
firmware/src/sportident/: README.md  constants.c  constants.h  sportident.c  sportident.h
logs/: init.md  read.md  read_advanced.md  read_start.md
